--- a/client/interpolate/style.scss
+++ b/client/interpolate/style.scss
@@ -2,10 +2,6 @@
 
 body #interpolate {
 	--accent-color: var(--color-accent-yellow);
-	magenta-midi-file {
-		height: 150px;
-	}
-
 }
 
 #interpolate {
